tunneload/e2e-tests/configs/kubernetes/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: test-service
  namespace: testing
spec:
  ports:
    - name: test
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 0

---
kind: Endpoints
apiVersion: v1
metadata:
  name: test-service
subsets:
  - addresses:
      - ip: "192.168.0.0"
    ports:
      - port: 80
        name: test
