tunneload/e2e-tests/configs/kubernetes/traefik-rules.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: testing-rule-minimal
  namespace: testing
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`example.com`)
    kind: Rule
    services:
    - name: testing-service-minimal
      port: 80
